# 3d-rotations

./: .flake8  .gitignore  Pipfile  README.md  download.sh  pyproject.toml  setup.cfg  util.py
libs/: util.py
notebooks/: anisotropic_error.ipynb  fundamental_matrix.ipynb  isotropic_error.ipynb
