[tool.poetry]
name = "3d-rotations"
version = "0.1.0"
description = ""
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
itkwidgets = "^0.32.0"
jupyter = {extras = ["notebook"], version = "^1.0.0"}
matplotlib = "^3.3.4"
numpy = "^1.21.0"
open3d = "^0.12.0"
opencv-python = "^4.5.1"
Pillow = "^9.3.0"
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]
flake8 = "*"
yapf = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
